2014-12-17  Michael R. Crusoe  <mcrusoe@msu.edu>

    * scripts/load-graph.py,khmer/_khmermodule.cc: restore threading to
    load-graph.py

2014-12-16  Titus Brown  <titus@idyll.org>

    * sandbox/{calc-error-profile.py,collect-variants.py,correct-errors.py,
    trim-low-abund.py}: Support for k-mer spectral error analysis, sublinear
    error profile calculations from shotgun data sets, adaptive variant
    collection based on graphalign, streaming error correction, and streaming
    error trimming.
    * tests/test_sandbox_scripts.py: added tests for sandbox/trim-low-abund.py.
    * tests/test_counting_hash.py: added tests for new
    CountingHash::find_spectral_error_positions function.

2014-12-16  Michael R. Crusoe  <mcrusoe@msu.edu>  &  Camille Scott
<camille.scott.w@gmail.com>

    * khmer/_khmermodule.cc: fixed memory leak in the ReadParser paired
    iterator (not used by any scripts).
    * lib/read_parsers.cc,khmer/_khmermodule.cc: Improved exception handling.
    * tests/test_read_parsers.py,
    tests/test-data/100-reads.fq.truncated.{bz2,gz}: Added tests for truncated
    compressed files accessed via ReadParser paired and unpaired iterators.

2014-12-09  Michael R. Crusoe  <mcrusoe@msu.edu>

    New FAST[AQ] parser (from the SeqAn project). Fixes known issue and a
    newly found read dropping issue
    https://github.com/ged-lab/khmer/issues/249
    https://github.com/ged-lab/khmer/pull/641
    Supports reading from non-seekable plain and gziped FAST[AQ] files (a.k.a
    pipe or streaming support)

    * khmer/{__init__.py,_khmermodule.cc}: removed the Config object, the
    threads argument to new_counting_hash, and adapted to other changes in API.
    Dropped the unused _dump_report_fn method. Enhanced error reporting.
    * lib/{bittest,consume_prof,error,khmer_config,scoringmatrix,thread_id_map}
    .{cc,hh},tests/test_khmer_config.py: deleted unused files
    * sandbox/collect-reads.py,scripts/{abundance-dist-single,do-partition,