@@ -3,8 +3,6 @@ verbosity = 2
 stop = TRUE
 attr = !known_failing,!jenkins
 #processes = -1 # breaks xunit output
-#attr = !known_failing,!highmem
-# where highmem > 0.5GiB memory
 
 [build_ext]
 define = SEQAN_HAS_BZIP2,SEQAN_HAS_ZLIB
