@@ -281,7 +281,6 @@ def test_64bitshift():
     assert 0 < kh.get_min_count(substr), kh.get_min_count(substr)
 
 
-@attr('highmem')
 def test_64bitshift_2():
     kh = khmer.new_hashtable(25, 4)
     fullstr = "GTATGCCAGCTCCAACTGGGCCGGTACGAGCAGGCCATTGCCTCTTGCCGCGATGCGTCGGCG"
@@ -292,7 +291,6 @@ def test_64bitshift_2():
         assert kh.get(substr) > 0
 
 
-@attr('highmem')
 def test_very_short_read():
     short_filename = utils.get_test_data('test-short.fa')
     kh = khmer.new_hashtable(9, 4)
@@ -323,7 +321,6 @@ class Test_ConsumeString(object):
         except TypeError, err:
             print str(err)
 
-    @attr('highmem')
     def test_abundance_by_pos(self):
         kh = self.kh
 
@@ -343,7 +340,6 @@ class Test_ConsumeString(object):
         assert dist[2] == 1
         assert sum(dist) == 2
 
-    @attr('highmem')
     def test_abundance_by_pos_bigcount(self):
         kh = self.kh
         kh.set_use_bigcount(True)       # count past MAX_COUNT
@@ -411,7 +407,6 @@ class Test_AbundanceDistribution(object):
         A_filename = utils.get_test_data('all-A.fa')
         self.kh.consume_fasta(A_filename)
 
-    @attr('highmem')
     def test_count_A(self):
         A_filename = utils.get_test_data('all-A.fa')
 
