@@ -15,7 +15,6 @@ from nose.plugins.attrib import attr
 # which the last 79 bases are common between the 3 sequences.
 
 
-@attr('highmem')
 def test_fakelump_together():
     fakelump_fa = utils.get_test_data('fakelump.fa')
 
@@ -31,7 +30,6 @@ def test_fakelump_together():
 # try loading stop tags from previously saved
 
 
-@attr('highmem')
 def test_fakelump_stop():
     fakelump_fa = utils.get_test_data('fakelump.fa')
     fakelump_stoptags_txt = utils.get_test_data('fakelump.fa.stoptags.txt')
@@ -51,7 +49,6 @@ def test_fakelump_stop():
 # check specific insertion of stop tag
 
 
-@attr('highmem')
 def test_fakelump_stop2():
     fakelump_fa = utils.get_test_data('fakelump.fa')
 
@@ -69,7 +66,6 @@ def test_fakelump_stop2():
 # try repartitioning
 
 
-@attr('highmem')
 def test_fakelump_repartitioning():
     fakelump_fa = utils.get_test_data('fakelump.fa')
     fakelump_fa_foo = utils.get_temp_filename('fakelump.fa.stopfoo')
@@ -113,7 +109,6 @@ def test_fakelump_repartitioning():
     assert n_partitions == 3, n_partitions
 
 
-@attr('highmem')
 def test_fakelump_load_stop_tags_trunc():
     fakelump_fa = utils.get_test_data('fakelump.fa')
     fakelump_fa_foo = utils.get_temp_filename('fakelump.fa.stopfoo')
@@ -160,7 +155,6 @@ def test_fakelump_load_stop_tags_trunc():
         pass
 
 
-@attr('highmem')
 def test_fakelump_load_stop_tags_notexist():
     fakelump_fa_foo = utils.get_temp_filename('fakelump.fa.stopfoo')
 
