@@ -14,7 +14,6 @@ import khmer_tst_utils as utils
 from nose.plugins.attrib import attr
 
 
-@attr('highmem')
 def test_read_properties():
 
     # Note: Using a data file with only one read.
@@ -28,7 +27,6 @@ def test_read_properties():
         assert read.accuracy == """][aaX__aa[`ZUZ[NONNFNNNNNO_____^RQ_"""
 
 
-@attr('highmem')
 def test_with_default_arguments():
 
     read_names = []
@@ -46,7 +44,6 @@ def test_with_default_arguments():
         assert m == n
 
 
-@attr('highmem')
 def test_gzip_decompression():
 
     reads_count = 0
@@ -79,7 +76,6 @@ def test_gzip_decompression_truncated_pairiter():
         print str(err)
 
 
-@attr('highmem')
 def test_bzip2_decompression():
 
     reads_count = 0
@@ -125,7 +121,6 @@ def test_badbzip2():
 
 
 @attr('multithread')
-@attr('highmem')
 def test_with_multiple_threads(testfile="test-reads.fq.bz2"):
 
     import operator
@@ -159,7 +154,6 @@ def test_with_multiple_threads(testfile="test-reads.fq.bz2"):
 
 
 @attr('multithread')
-@attr('highmem')
 def test_with_multiple_threads_big():
     test_with_multiple_threads(testfile="test-large.fa")
 
@@ -268,7 +262,6 @@ def test_read_pair_iterator_in_error_mode():
     assert all(matches)  # Assert ALL the matches. :-]
 
 
-@attr('highmem')
 def test_read_pair_iterator_in_error_mode_xfail():
 
     rparser = \
